WIP - reconciled libraries and accessors